--- a/pre-commit/action.yaml
+++ b/pre-commit/action.yaml
@@ -5,8 +5,19 @@ runs:
   using: composite
   steps:
     - name: Get Current Python Version
-      run: echo "PY=$(python -VV | md5sum | cut -d' ' -f1)" >> $GITHUB_ENV
-      shell: bash
+      shell: python
+      run: |
+        import hashlib
+        import os
+        import sys
+
+        v = hashlib.sha1(sys.version.encode()).hexdigest()
+
+        with open(os.environ["GITHUB_ENV"], encoding="utf-8") as f:
+            env = f.read()
+
+        with open(os.environ["GITHUB_ENV"], "w", encoding="utf-8") as f:
+            f.write(env.rstrip("\n") + "\n" + f"PY={v}")
 
     - uses: actions/cache@v4
       with:
