--- a/pre-commit/action.yaml
+++ b/pre-commit/action.yaml
@@ -13,8 +13,8 @@ runs:
 
         v = hashlib.sha1(sys.version.encode()).hexdigest()
 
-        with open(os.environ["GITHUB_ENV"], 'a', encoding="utf-8") as f:
-            env = f.write(f"\nPY={v}")
+        with open(os.environ["GITHUB_ENV"], 'a+', encoding="utf-8") as f:
+            env = f.write(f"\nPY={v}\n")
 
     - uses: actions/cache@v4
       with:
