--- a/pre-commit/action.yaml
+++ b/pre-commit/action.yaml
@@ -26,7 +26,5 @@ runs:
     - run: pre-commit run --all-files --show-diff-on-failure --color=always
       shell: bash
 
-    - name: Run this action with only post
-      uses: gacts/run-and-post-run@v1
-      with:
-        post: pre-commit gc
+    - run: pre-commit gc
+      shell: bash
