--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -16,11 +16,8 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.x"
 
-      - uses: trim21/setup-poetry@dist/v2
-
-      - run: poetry config virtualenvs.create false --local
-      - run: poetry install --sync
+      - run: pip install pre-commit
 
       - uses: ./pre-commit/
