--- a/setup-go/action.yaml
+++ b/setup-go/action.yaml
@@ -25,10 +25,8 @@ runs:
       uses: actions/cache@v4
       if: ${{ inputs.cache-namespace == ''}}
       with:
-        path: |
-          ~/.cache/go-build
-          ~/go/pkg
-        key: go-cache-${{ hashFiles('go.mod') }}-${{ hashFiles('go.sum') }}
+        path: ~/go/pkg
+        key: go-cache-${{ hashFiles('go.mod') }}-${{ hashFiles('go.sum') }}-
         restore-keys: |
           go-cache-${{ hashFiles('go.mod') }}-
 
