--- a/setup-go/action.yaml
+++ b/setup-go/action.yaml
@@ -21,18 +21,8 @@ runs:
         go-version: ${{ steps.gomod.outputs.toolchain-go-version || steps.gomod.outputs.go }}
         cache: false
 
-    - name: Go Cache
+    - name: Go Build Cache
       uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4
-      if: ${{ inputs.cache-namespace == ''}}
-      with:
-        path: ~/go/pkg
-        key: go-cache-${{ hashFiles('go.mod') }}-${{ hashFiles('go.sum') }}-
-        restore-keys: |
-          go-cache-${{ hashFiles('go.mod') }}-
-
-    - name: Go Build Cache (${{ inputs.cache-namespace }})
-      uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4
-      if: ${{ inputs.cache-namespace != ''}}
       with:
         path: |
           ~/.cache/go-build
