--- a/pre-commit/action.yaml
+++ b/pre-commit/action.yaml
@@ -17,7 +17,7 @@ runs:
         with open(os.environ["GITHUB_OUTPUT"], 'a+', encoding="utf-8") as f:
             env = f.write(f"\nPY={v}\n")
 
-    - uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4
+    - uses: actions/cache@v4
       id: cache
       with:
         path: ~/.cache/pre-commit
@@ -30,6 +30,6 @@ runs:
 
     - name: Run this action with only post
       if: steps.cache.outputs.cache-hit != 'true'
-      uses: gacts/run-and-post-run@d803f6920adc9a47eeac4cb6c93dbc2e2890c684 # v1
+      uses: gacts/run-and-post-run@v1
       with:
         post: pre-commit gc
