Update Go version installation method in action.yaml

--- a/setup-go/action.yaml
+++ b/setup-go/action.yaml
@@ -9,16 +9,10 @@ description: "setup golang env"
 runs:
   using: "composite"
   steps:
-    - run: echo "GOTOOLCHAIN=local" >> $GITHUB_ENV
-      shell: bash
-
-    - id: gomod
-      uses: Arthur1/parse-gomod-action@v0.1.0
-
     - name: Install Go
       uses: actions/setup-go@v6
       with:
-        go-version: ${{ steps.gomod.outputs.toolchain-go-version || steps.gomod.outputs.go }}
+        go-version: go.mod
         cache: false
 
     - name: Go Build Cache
