--- a/setup-go/action.yaml
+++ b/setup-go/action.yaml
@@ -12,7 +12,7 @@ runs:
     - name: Install Go
       uses: actions/setup-go@v6
       with:
-        go-version: go.mod
+        go-version-file: go.mod
         cache: false
 
     - name: Go Build Cache
